--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,9 @@ li {
         padding: 50px 100px 60px 100px;
     }
 }
+
+@media only screen and (max-width: 768px) {
+    body {
+        padding: 30px;
+    }
+}
