--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,8 @@ body {
     background-size: cover;
     width: 100vw;
     height: 100vh;
-    padding: 70px 480px 50px 480px;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+place-items: center;
     overflow: hidden;
 }
 
@@ -63,22 +62,27 @@ li {
     cursor: pointer;
 }
 
-@media only screen and (max-width: 1366px) {
-    body {
-        padding: 50px 15% 60px 15%;
-    }
+
+
+.content {
+    width: 960px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 60px 0;
 }
 
-@media only screen and (max-width: 1170px) {
-    body {
-        padding: 50px 100px 60px 100px;
+@media only screen and (max-width: 960px) {
+    .content {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 40px 30px;
     }
 }
 
 @media only screen and (max-width: 768px) {
-    body {
-        padding: 30px;
-    }
     header {
         font-family: 'Atma';
         line-height: 40px;
